--- a/JavaProject/model/src/main/resources/model.properties
+++ b/JavaProject/model/src/main/resources/model.properties
@@ -1,4 +1,4 @@
 #DB Connection Properties
-url=jdbc:mysql://localhost/jpublankproject?autoReconnect=true&useSSL=false
+url=jdbc:mysql://localhost:8889/JavaLorann
 login=root
-password=
+password=root
