--- a/JavaProject/model/src/main/java/model/javaproject/novaann/world/element/mobile/resources/model.properties
+++ b/JavaProject/model/src/main/java/model/javaproject/novaann/world/element/mobile/resources/model.properties
@@ -1,4 +1,4 @@
 #DB Connection Properties
-url=jdbc:mysql://localhost:3306/javalorann
+url=jdbc:mysql://localhost:8889/JavaLorann?autoReconnect=true&useSSL=false
 login=root
-password=
+password=root
